--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="joey.com.leetroid.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    tools:context="grief.com.bottomtabtest.MainActivity">
+    <!--android:id="@android:id/tabhost"-->
+    <RelativeLayout
+        android:id="@+id/frame_container"
+        android:layout_above="@+id/tab_host"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:background="#ffffff"
+        >
+    </RelativeLayout>
+    <android.support.v4.app.FragmentTabHost
+        android:id="@+id/tab_host"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <!--<FrameLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--</FrameLayout>-->
+    </android.support.v4.app.FragmentTabHost>
 </RelativeLayout>
