--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="#ffffff"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -10,6 +11,7 @@
         android:layout_height="50dp"
         android:background="#363636">
         <TextView
+            android:id="@+id/problem_title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
@@ -18,4 +20,15 @@
             android:textSize="20dp"/>
     </RelativeLayout>
 
+    <ScrollView
+        android:layout_below="@id/problem_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/problem_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+        </TextView>
+    </ScrollView>
 </RelativeLayout>
