Change search function

--- a/app/src/main/res/layout/main_list_fragment.xml
+++ b/app/src/main/res/layout/main_list_fragment.xml
@@ -6,6 +6,7 @@
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
         android:background="#363636">
         <TextView
             android:layout_width="wrap_content"
@@ -14,53 +15,20 @@
             android:layout_centerInParent="true"
             android:text="Problems"
             android:textSize="20dp"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_below="@id/problem_title"
-        android:layout_above="@+id/problem_region"
-        android:id="@+id/search_region"
-        android:background="@drawable/search_region_round_shape"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
         <ImageView
-            android:id="@+id/search_region_icon"
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:layout_marginRight="10dp"
             android:scaleType="fitXY"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/search_icon"
-            >
-        </ImageView>
-        <Button
-            android:id="@+id/search_region_button"
-            android:background="@drawable/search_region_button_round_shape"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_margin="3dp"
-            android:text="Search"
-            android:textSize="16dp"
-            android:textColor="#ffffff"
             android:layout_alignParentRight="true"
-            >
-        </Button>
-        <EditText
-            android:id="@+id/search_region_edit"
-            android:layout_toRightOf="@id/search_region_icon"
-            android:layout_toLeftOf="@id/search_region_button"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp" />
+            android:layout_centerVertical="true"
+            android:src="@mipmap/search_icon"/>
     </RelativeLayout>
+
 
     <RelativeLayout
         android:id="@+id/problem_region"
+        android:layout_below="@id/problem_title"
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_alignParentBottom="true"
