--- a/app/src/main/res/layout/web_fragment.xml
+++ b/app/src/main/res/layout/web_fragment.xml
@@ -7,7 +7,6 @@
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
         android:background="#363636">
         <TextView
             android:layout_width="wrap_content"
@@ -21,9 +20,7 @@
     <RelativeLayout
         android:layout_below="@+id/problem_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp">
+        android:layout_height="match_parent">
         <WebView
             android:id="@+id/webview"
             android:layout_width="match_parent"
