--- a/app/src/main/res/layout/tab_item.xml
+++ b/app/src/main/res/layout/tab_item.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
     <ImageView
         android:id="@+id/tab_image"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_width="45dp"
+        android:scaleType="fitXY"
         android:layout_centerHorizontal="true"
         >
     </ImageView>
@@ -14,7 +15,6 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="你好"
         android:textColor="#ffffff"
         >
     </TextView>
