--- a/app/src/main/res/layout/web_fragment.xml
+++ b/app/src/main/res/layout/web_fragment.xml
@@ -15,6 +15,13 @@
             android:layout_centerInParent="true"
             android:text="Discussions"
             android:textSize="20dp"/>
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!-->-->
+        <!--</Button>-->
     </RelativeLayout>
 
     <RelativeLayout
