--- a/app/src/main/res/layout/main_list_fragment.xml
+++ b/app/src/main/res/layout/main_list_fragment.xml
@@ -16,9 +16,10 @@
             android:text="Problems"
             android:textSize="20dp"/>
         <ImageView
+            android:id="@+id/search_icon"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="15dp"
             android:scaleType="fitXY"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
