--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,10 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
     <RelativeLayout
-        android:layout_below="@id/problem_title"
         android:id="@+id/search_region"
         android:background="@drawable/search_region_round_shape"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -41,5 +40,19 @@
             android:layout_marginRight="6dp"
             android:layout_width="match_parent"
             android:layout_height="40dp" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_below="@id/search_region"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        >
+        <ListView
+            android:id="@+id/suggestion_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null">
+        </ListView>
     </RelativeLayout>
 </RelativeLayout>
