--- a/app/src/main/res/layout/suggestion_list_item.xml
+++ b/app/src/main/res/layout/suggestion_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
@@ -7,14 +8,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:textSize="24dp"
-        android:textStyle="bold"
+        android:textSize="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"/>
-    <view
+    <View
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:background="@color/colorLightWhite"
-        android:layout_height="1dp">
-    </view>
+        android:layout_height="1dp" />
 </RelativeLayout>
