--- a/app/src/main/res/layout/problem_list_item.xml
+++ b/app/src/main/res/layout/problem_list_item.xml
@@ -3,15 +3,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/problem_region_star"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_margin="12dp"
-        android:scaleType="fitXY"
-        android:layout_centerVertical="true"
-        android:src="@mipmap/unstarred"
-        />
+    <RelativeLayout
+        android:id="@+id/problem_region_star_wrapper"
+        android:layout_alignParentLeft="true"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        >
+        <ImageView
+            android:id="@+id/problem_region_star"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="12dp"
+            android:scaleType="fitXY"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/unstarred"
+            />
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/problem_region_difficulty"
         android:layout_width="wrap_content"
@@ -21,8 +29,9 @@
         android:layout_marginRight="18dp"
         android:textSize="16dp"
         />
+
     <TextView
-        android:layout_toRightOf="@id/problem_region_star"
+        android:layout_toRightOf="@id/problem_region_star_wrapper"
         android:layout_toLeftOf="@id/problem_region_difficulty"
         android:layout_centerVertical="true"
         android:id="@+id/problem_region_title"
