--- a/app/src/main/res/layout/problem_list_item.xml
+++ b/app/src/main/res/layout/problem_list_item.xml
@@ -6,8 +6,9 @@
     <RelativeLayout
         android:id="@+id/problem_region_star_wrapper"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="49dp"
         >
         <ImageView
             android:id="@+id/problem_region_star"
