--- a/app/src/main/res/layout/suggestion_list_item.xml
+++ b/app/src/main/res/layout/suggestion_list_item.xml
@@ -3,17 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/suggestion_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:textSize="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
-    <View
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:background="@color/colorLightWhite"
-        android:layout_height="1dp" />
+        android:textSize="16dp"
+        android:padding="10dp" />
 </RelativeLayout>
