--- a/app/src/main/res/layout/web_fragment.xml
+++ b/app/src/main/res/layout/web_fragment.xml
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#ffffff">
+        android:background="#DBDBDB">
         <Button
             android:id="@+id/back"
             android:layout_height="40dp"
