--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -28,6 +28,7 @@
             android:id="@+id/problem_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#808080"
             >
         </TextView>
     </ScrollView>
