--- a/app/src/main/res/layout/web_fragment.xml
+++ b/app/src/main/res/layout/web_fragment.xml
@@ -39,31 +39,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#DBDBDB">
+        android:background="#EEEEEE">
         <Button
             android:id="@+id/back"
-            android:layout_height="40dp"
-            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_width="30dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="40dp"
             android:scaleType="fitXY"
             android:background="@mipmap/back"
             >
         </Button>
         <Button
             android:id="@+id/forward"
-            android:layout_height="40dp"
-            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_width="30dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="40dp"
             android:scaleType="fitXY"
             android:background="@mipmap/forward"
             >
         </Button>
         <Button
             android:id="@+id/refresh"
-            android:layout_height="40dp"
-            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_width="30dp"
             android:layout_centerHorizontal="true"
             android:scaleType="fitXY"
             android:background="@mipmap/refresh"
