Commit the demo solutions

--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -28,7 +28,8 @@
             android:id="@+id/problem_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#808080"
+            android:textColor="#ffffff"
+            android:background="#708090"
             >
         </TextView>
     </ScrollView>
