--- a/app/src/main/res/layout/main_list_fragment.xml
+++ b/app/src/main/res/layout/main_list_fragment.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
             android:layout_centerInParent="true"
-            android:text="Problems"
+            android:text="Solution"
             android:textSize="20dp"/>
         <ImageView
             android:id="@+id/search_icon"
